--- a/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-suma.adoc
@@ -1,5 +1,5 @@
 [[deploy-suma-server]]
-= Deploy {productname} {productnumber} Server
+= Deploy {productname} {productnumber} Server on {sle-micro}
 ifeval::[{uyuni-content} == true]
 :noindex:
 endif::[]
@@ -19,13 +19,11 @@ For background information about disk space, see xref:installation-and-upgrade:h
 .Software and Hardware Requirements
 |===
 | Software and Hardware  | Recommended
-| Operating System:      | {sle-micro} {microversion}
+| Operating System       | {sle-micro} {microversion}
 | Architecture           | {x86_64}, {arm}, {s390x}, {ppc64le}
-| Processor: (CPU)       | Minimum of four (4) 64-bit CPU cores
-| RAM:                   | 16 GB
-|                        |
-|                        |
-| Disk Space:            | 200 GB
+| Processor (CPU)        | Minimum of four (4) 64-bit CPU cores
+| RAM                    | 16 GB
+| Disk Space             | 200 GB
 | Channel Requirements   | 50 GB per SUSE or openSUSE product
                           
                            360 GB per Red Hat product
@@ -38,11 +36,12 @@ For background information about disk space, see xref:installation-and-upgrade:h
 The supported operating system for the container host is {sle-micro} {microversion}.
 
 Container host::
-A container host is a server equipped with a container engine like Podman, which lets it manage and deploy containers.
+A container host is a server equipped with a container engine like [systemitem]``Podman``, which lets it manage and deploy containers.
 These containers hold applications and their essential parts, such as libraries, but not a full operating system, making them lightweight.
 This setup ensures applications run the same way in different environments.
 The container host supplies the necessary resources such as CPU, memory, and storage for these containers.
 ====
+
 
 [IMPORTANT]
 ====
