Fix Server/Proxy repository enablement instructions

--- a/modules/installation-and-upgrade/pages/container-deployment/uyuni/server-deployment-uyuni.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/uyuni/server-deployment-uyuni.adoc
@@ -58,7 +58,7 @@ transactional-update shell
 +
 
 ----
-zypper ar https://download.opensuse.org/repositories/systemsmanagement:/Uyuni:/Stable/images/repo/Uyuni-Server-POOL-x86_64-Media1/
+zypper ar https://download.opensuse.org/repositories/systemsmanagement:/Uyuni:/Stable/images/repo/Uyuni-Server-POOL-$(arch)-Media1/ uyuni-server-stable
 ----
 +
 
@@ -74,7 +74,7 @@ zypper ref
 
 [source, shell]
 ----
-zypper in mgradm mgrctl mgradm-bash-completion mgrctl-bash-completion netavark uyuni-storage-setup-server
+zypper in mgradm mgrctl mgradm-bash-completion mgrctl-bash-completion uyuni-storage-setup-server
 ----
 +
 
