--- a/modules/quickstart/pages/container-deployment/uyuni/quickstart-deploy-uyuni-server.adoc
+++ b/modules/quickstart/pages/container-deployment/uyuni/quickstart-deploy-uyuni-server.adoc
@@ -100,7 +100,7 @@ transactional-update shell
 
 [source, shell]
 ----
-zypper ar https://download.opensuse.org/repositories/systemsmanagement:/Uyuni:/Stable/images/repo/Uyuni-Server-POOL-x86_64-Media1/
+zypper ar https://download.opensuse.org/repositories/systemsmanagement:/Uyuni:/Stable/images/repo/Uyuni-Server-POOL-$(arch)-Media1/ uyuni-server-stable
 ----
 
 . Refresh the repository list and accept the key:
@@ -116,7 +116,7 @@ zypper ref
 
 [source, shell]
 ----
-zypper in mgradm mgrctl mgradm-bash-completion mgrctl-bash-completion 
+zypper in mgradm mgrctl mgradm-bash-completion mgrctl-bash-completion uyuni-storage-setup-server
 ----
 +
 
