--- a/modules/quickstart/pages/container-deployment/uyuni/quickstart-deploy-uyuni-proxy.adoc
+++ b/modules/quickstart/pages/container-deployment/uyuni/quickstart-deploy-uyuni-proxy.adoc
@@ -107,7 +107,7 @@ transactional-update shell
 +
 
 ----
-zypper ar https://download.opensuse.org/repositories/systemsmanagement:/Uyuni:/Stable/images/repo/Uyuni-Proxy-POOL-x86_64-Media1/
+zypper ar https://download.opensuse.org/repositories/systemsmanagement:/Uyuni:/Stable/images/repo/Uyuni-Proxy-POOL-$(arch)-Media1/ uyuni-proxy-stable
 ----
 
 . Refresh the repository list and accept the key:
