Aligned Uyuni page title with SUMA.

--- a/modules/installation-and-upgrade/pages/container-deployment/uyuni/server-deployment-uyuni.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/uyuni/server-deployment-uyuni.adoc
@@ -1,4 +1,4 @@
-= Deploy on {leapmicro} {microversion}
+= Deploy {productname} on {leapmicro} {microversion}
 ifeval::[{suma-content} == true]
 :noindex:
 endif::[]
