Uyuni Server deployment, format fixes

--- a/modules/installation-and-upgrade/pages/container-deployment/uyuni/server-deployment-uyuni.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/uyuni/server-deployment-uyuni.adoc
@@ -99,7 +99,6 @@ However, if custom persistent storage is required for your infrastructure, use t
 This tool simplifies creating the container storage and database volumes.
 
 Use the command in the following manner: 
-+
 
 ----
 mgr-storage-server <storage-disk-device> [<database-disk-device>]
@@ -107,10 +106,10 @@ mgr-storage-server <storage-disk-device> [<database-disk-device>]
 
 For example: 
 
+
 ----
 mgr-storage-server /dev/nvme1n1 /dev/nvme2n1
 ----
-+
 
 [NOTE]
 ====
@@ -180,7 +179,8 @@ By default [command]``podman`` stores its volumes in [path]``/var/lib/containers
 
 You can provide custom storage for the volumes by mounting disks on this path or the expected volume path inside it such as: [path]``/var/lib/containers/storage/volumes/var-spacewalk``. This is especially important for the database and package mirrors. 
 
-For a list of all persistent volumes in the container, see
+For a list of all persistent volumes in the container, see:
+
 * xref:installation-and-upgrade:container-management/persistent-container-volumes.adoc[]
 * xref:administration:troubleshooting/tshoot-container-full-disk.adoc[]
 
