Replaced Task with our standard term - Procedure.

--- a/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-suma.adoc
@@ -19,7 +19,7 @@ To successfully deploy, you will perform the following actions:
 
 
 // Add certificate tasks item
-.Task: Proxy Deployment
+.Procedure: Proxy Deployment
 . Review hardware requirements.
 . Synchronize the {sle-micro} {microversion} parent channel and the proxy extension child channel on the server.
 . Install {sle-micro} {microversion} on a bare-metal machine.
@@ -86,14 +86,14 @@ This table shows the hardware requirements for deploying {productname} Proxy.
 
 == Sync the Parent and Proxy Extension Child Channels
 
-This section presumes that you have already entered your organization credentials under the menu:Admin[Setup Wizard -> Organization Credentials] in the Servers {webui}.
+This section presumes that you have already entered your organization credentials under the menu:Admin[Setup Wizard -> Organization Credentials] in the server's {webui}.
 Products are listed on the menu:Admin[Setup Wizard -> Products] page.
 This channel must be fully synchronized on the server, with the child channel [systemitem]``Proxy`` as an extension option selected.
 
 .{productname} {productnumber} Channel Sync for Proxy
 image::setup-wizard.png[scaledwidth=80%]
 
-.Task: Sync the Proxy Parent Channel and Proxy Extension
+.Procedure: Sync the Proxy Parent Channel and Proxy Extension
 . In the {productname} {webui} select menu:Admin[Products].
 . From the products page enter {sle-micro} in the filter field.
 . Next use the drop-down to select the required architecture.
@@ -106,7 +106,7 @@ image::setup-wizard.png[scaledwidth=80%]
 
 == {sle-micro} {microversion} Installation
 
-.Task: Download the Installation Media
+.Procedure: Download the Installation Media
 . Locate the {sle-micro} {microversion} installation media at https://www.suse.com/download/sle-micro/.
 . You will need an account with {scc} and must be logged in to download the ISO.
 . Download [filename]``SLE-Micro-5.5-DVD-x86_64-GM-Media1.iso``.
@@ -118,7 +118,7 @@ image::setup-wizard.png[scaledwidth=80%]
 For detailed documentation on preparing your machines OS (virtual or physical), see link:https://documentation.suse.com/sle-micro/5.5/html/SLE-Micro-all/book-deployment-slemicro.html[{sle-micro} {microversion} Deployment Guide].
 
 
-.Task: {sle-micro} {microversion} Installation
+.Procedure: {sle-micro} {microversion} Installation
 . Use the arrow keys to select [systemitem]``Installation``.
 . Adjust Keyboard and language.
   Click the [systemitem]``checkbox`` to accept the license agreement.
@@ -154,7 +154,7 @@ This finalizes installation of {sle-micro} {microversion} and {productname} {pro
 === Update the System
 
 
-.Task: Update the System
+.Procedure: Update the System
 . Login as *root*.
 . Run **transactional-update**:
 +
@@ -219,7 +219,7 @@ For more information, see
 
 == Create an Activation Key for the Proxy
 
-.Task: Create an Activation Key
+.Procedure: Create an Activation Key
 . Select menu:Systems[Activation Keys] then click btn:[Create key].
 . Create an activation key for the proxy host with {sle-micro} {microversion} as the parent channel.
   This key should include all recommended channels and the proxy as an extension child channel.
@@ -229,7 +229,7 @@ For more information, see
 
 == Bootstrap the Proxy Host as a Client
 
-.Task: Bootstrap the Proxy Host
+.Procedure: Bootstrap the Proxy Host
 . Select menu:Systems[Bootstrapping].
 . Fill in the fields for your proxy host.
 . Select the activation key created in the previous step from the drop-down.
@@ -240,7 +240,7 @@ For more information, see
 . Select the host from the menu:System[] list and trigger a second reboot after all events are finished to conclude the onboarding.
 
 
-.Task: Update the Proxy Host
+.Procedure: Update the Proxy Host
 . Select the host from the menu:Systems[] list and apply all patches to update it.
 . Reboot the proxy host.
 
@@ -255,7 +255,7 @@ The {webui} generates a configuration archive.
 This archive needs to be made available on the proxy container host.
 
 
-.Task: Copy the Proxy Configuration
+.Procedure: Copy the Proxy Configuration
 
 . Copy the configuration archive ([literal]``config.tar.gz``) generated in the previous step to the Proxy host:
 +
@@ -278,7 +278,7 @@ mgrpxy install podman config.tar.gz
 Container can now be started with the [literal]`mgrpxy` command:
 
 [[proc-setup-containers-setup-start]]
-.Task: Start and Check Proxy Status
+.Procedure: Start and Check Proxy Status
 
 . Start the Proxy by calling:
 +
