Removed the admonition.

--- a/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-suma.adoc
@@ -168,19 +168,13 @@ transactional-update
 . Log in as root.
 . Install the container utilities:
 +
-
-[NOTE]
-====
-Alternatively you may install [systemitem]``mgrpxy-zsh-completion`` or [systemitem]``mgrpxy-fish-completion``.
-====
-+
-
 [source, shell]
 ----
 transactional-update pkg install mgrpxy mgrpxy-bash-completion
 ----
 +
-
+* Alternatively you may install [systemitem]``mgrpxy-zsh-completion`` or [systemitem]``mgrpxy-fish-completion``.
++
 . Reboot the system.
 
 
@@ -214,7 +208,7 @@ This command will create the persistent storage volumes at [path]``/var/lib/cont
 For more information, see
 
 * xref:installation-and-upgrade:container-management/persistent-container-volumes.adoc[]
-* * xref:administration:troubleshooting/tshoot-container-full-disk.adoc[]
+* xref:administration:troubleshooting/tshoot-container-full-disk.adoc[]
 ====
 
 == Create an Activation Key for the Proxy
