Reorganized and simplified paragraph.

--- a/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-suma.adoc
@@ -183,23 +183,23 @@ transactional-update pkg install mgrpxy mgrpxy-bash-completion
 
 This step is optional.
 However, if custom persistent storage is required for your infrastructure, use the [command]``mgr-storage-proxy`` tool. 
-
-* For more information, see [command]``mgr-storage-proxy --help``.
 This tool simplifies creating the container storage and Squid cache volumes.
-+
-Use the command in the following manner: 
-+
 
+Use the command in the following manner: 
 ----
 mgr-storage-proxy <storage-disk-device>
 ----
-+
+
 For example: 
-+
 ----
 mgr-storage-proxy /dev/nvme1n1
 ----
-+
+
+For more information, type: 
+----
+mgr-storage-proxy --help
+----
+
 
 [NOTE]
 ====
