Further tidy-up.

--- a/modules/installation-and-upgrade/pages/container-deployment/generate_proxy_config.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/generate_proxy_config.adoc
@@ -54,11 +54,10 @@ image::suma_proxy_containerized_webui.png[scaledwidth=80%]
 
 === Generate the Proxy Configuration with spacecmd and Self-Signed Certificate
 
+You can generate a Proxy configuration using [literal]``spacecmd``.
+
 .Procedure: Generating Proxy Configuration with spacecmd and Self-Signed Certificate
-You can generate a Proxy configuration using spacecmd.
-
 . SSH into your container host.
-
 . Execute the following command replacing the Server and Proxy FQDN:
 +
 ----
@@ -74,7 +73,7 @@ mgrctl cp server:/tmp/config.tar.gz .
 
 === Generate the Proxy Configuration with spacecmd and Custom Certificate
 
-You can generate a Proxy configuration using spacecmd for a custom certificates rather than the default self-signed certificates.
+You can generate a Proxy configuration using [literal]``spacecmd`` for a custom certificates rather than the default self-signed certificates.
 
 .Procedure: Generating Proxy Configuration with spacecmd and Custom Certificate
 . SSH into your Server container host.
