--- a/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-suma.adoc
@@ -256,10 +256,8 @@ This archive needs to be made available on the proxy container host.
 ----
 scp config.tar.gz <proxy-FQDN>:/root
 ----
-
 . Install the Proxy with:
 +
-
 ----
 mgrpxy install podman config.tar.gz
 ----
@@ -276,28 +274,24 @@ Container can now be started with the [literal]`mgrpxy` command:
 
 . Start the Proxy by calling:
 +
-
 ----
 mgrpxy start
 ----
-
 . Check container status by calling:
 +
-
 ----
 mgrpxy status
 ----
 +
-
 Five {productname} Proxy containers should be present:
 
-- proxy-salt-broker
-- proxy-httpd
-- proxy-tftpd
-- proxy-squid
-- proxy-ssh
+* proxy-salt-broker
+* proxy-httpd
+* proxy-tftpd
+* proxy-squid
+* proxy-ssh
 
-And should be part of the [literal]``proxy-pod`` container pod.
+It should be part of the [literal]``proxy-pod`` container pod.
 
 
 ////
@@ -336,8 +330,7 @@ zypper in helm mgrpxy
 By default, the {productname} Proxy suite is configured to use the same image version and registry path for each of its services.
 However, it is possible to override the default values for a specific service using the install parameters ending with [literal]``-tag`` and [literal]``-image``.
 
-For example, use it like this:
-
+For example:
 ----
 mgrpxy install podman --httpd-tag 0.1.0 --httpd-image registry.opensuse.org/uyuni/proxy-httpd /path/to/config.tar.gz
 ----
@@ -345,7 +338,6 @@ mgrpxy install podman --httpd-tag 0.1.0 --httpd-image registry.opensuse.org/uyun
 It adjusts the configuration file for the httpd service, where [path]``registry.opensuse.org/uyuni/proxy-httpds`` is the image to use and [literal]``0.1.0`` is the version tag, before restarting it.
 
 To reset the values to defaults, run the install command again without those parameters:
-
 ----
 mgrpxy install podman /path/to/config.tar.gz
 ----
