Changes added for Uyuni secion of the document.

--- a/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-suma.adoc
@@ -155,7 +155,7 @@ This finalizes installation of {sle-micro} {microversion} and {productname} {pro
 
 
 .Procedure: Updating the System
-. Login as *root*.
+. Log in as *root*.
 . Run **transactional-update**:
 +
 
@@ -283,15 +283,13 @@ mgrpxy start
 mgrpxy status
 ----
 +
-Five {productname} Proxy containers should be present:
+Five {productname} Proxy containers should be present and should be part of the [literal]``proxy-pod`` container pod:
 
 * proxy-salt-broker
 * proxy-httpd
 * proxy-tftpd
 * proxy-squid
 * proxy-ssh
-
-It should be part of the [literal]``proxy-pod`` container pod.
 
 
 ////
