--- a/modules/installation-and-upgrade/pages/container-deployment/uyuni/proxy-deployment-uyuni.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/uyuni/proxy-deployment-uyuni.adoc
@@ -95,7 +95,7 @@ To guarantee that clients can resolve the FQDN domain name, both the containeriz
 .Procedure: Installing Uyuni Tools on {leapmicro} {microversion}
 . On your local host open a terminal window or start up a virtual machine running {leapmicro} {microversion}.
 
-. Login.
+. Log in.
 
 . Enter the [command]``transactional-update shell``:
 +
@@ -145,7 +145,7 @@ transactional-update
 ----
 
 . Reboot the system.
-. Login as root.
+. Log in as root.
 . Install the container utilities:
 +
 
@@ -230,9 +230,10 @@ The container host for the {productname} Proxy must be registered as a salt mini
 
 You will perform the following tasks:
 
-1. Generate a Proxy configuration file.
-2. Transfer the configuration to the Proxy.
-3. Start the Proxy with the [literal]``mgrpxy`` command.
+.Procedure:
+. Generate a Proxy configuration file.
+. Transfer the configuration to the Proxy.
+. Start the Proxy with the [literal]``mgrpxy`` command.
 
 [[proc-proxy-containers-setup-webui]]
 .Task: Generating a Proxy Container Configuration using Web UI
@@ -308,15 +309,13 @@ mgrpxy status
 ----
 +
 
-Five {productname} Proxy containers should be present:
+Five {productname} Proxy containers should be present and should be part of the [literal]``proxy-pod`` container pod:
 
-- proxy-salt-broker
-- proxy-httpd
-- proxy-tftpd
-- proxy-squid
-- proxy-ssh
-
-And should be part of the [literal]``proxy-pod`` container pod.
+* proxy-salt-broker
+* proxy-httpd
+* proxy-tftpd
+* proxy-squid
+* proxy-ssh
 
 
 
