Minor changes to naming and formatting.

--- a/modules/installation-and-upgrade/pages/container-deployment/suma/server-migration-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/server-migration-suma.adoc
@@ -1,4 +1,4 @@
-= Migrating the {productname} Server to a Containerized Environment
+= {productname} Server Migration to a Containerized Environment
 ifeval::[{uyuni-content} == true]
 :noindex:
 endif::[]
@@ -55,6 +55,7 @@ Additionally, the IP address must remain unchanged to ensure that the clients ca
 After the migration, it will be necessary to manually update the DHCP and DNS records to point to the new server.
 ////
 
+
 == Migration
 
 === Initial Preparation on the Old 4.3 Server
@@ -62,14 +63,11 @@ After the migration, it will be necessary to manually update the DHCP and DNS re
 .Procedure: Initial preparation on the 4.3 server
 . Stop the {productname} services:
 +
-
 ----
 spacewalk-service stop
 ----
-
 . Stop the PostgreSQL service:
 +
-
 ----
 systemctl stop postgresql
 ----
@@ -84,14 +82,11 @@ The migration process will take care of the server installation.
 . Ensure that for [systemitem]``root`` an SSH key exists on the new {productnumber} server.
   If a key does not exist, create it with:
 +
-
 ----
 ssh-keygen -t rsa
 ----
-
 . The SSH configuration and agent should be ready on the new server for a passwordless connection to the 4.3 server.
 +
-
 [NOTE]
 ====
 To establish a passwordless connection, the migration script relies on an SSH agent running on the new server.
@@ -99,24 +94,19 @@ If the agent is not active yet, initiate it by running [command]``eval $(ssh-age
 Then add the SSH key to the running agent with [command]``ssh-add`` followed by the path to the private key.
 You will be prompted to enter the password for the private key during this process.
 ====
-
 . Copy the public SSH key to the {productname} 4.3 Server ([literal]``<oldserver.fqdn>``) with [command]``ssh-copy-id``.
   Replace [literal]``<oldserver.fqdn>`` with the FQDN of the 4.3 server:
 +
-
 ----
 ssh-copy-id <old server.fqdn>
 ----
 +
-
 The SSH key will be copied into the old server's [path]``~/.ssh/authorized_keys`` file.
 For more information, see the [literal]``ssh-copy-id`` manpage.
 +
-
 // . This step is optional:
 //   The migration script only uses the 4.3 server's FQDN in the SSH command.
 //   This means that every other configuration required to connect, needs to be defined in the [path]``~/.ssh/config`` file.
-
 . Establish an SSH connection from the new server to the old {productname} Server to check that no password is needed.
   Also there must not by any problem with the host fingerprint.
   In case of trouble, remove old fingerprints from the [path]``~/.ssh/known_hosts`` file.
@@ -129,7 +119,7 @@ For more information, see the [literal]``ssh-copy-id`` manpage.
 
 When planning your migration from {productname} 4.3 to {productname} 5.0, ensure that your target instance meets or exceeds the specifications of the old setup.
 
-This includes, but is not limited to, [literal]``Memory (RAM)``, [literal]``CPU Cores``, [literal]``Storage``, and [literal]``Network Bandwidth``.
+This includes, but is not limited to, memory (RAM), CPU Cores, Storage, and Network Bandwidth.
 
 
 .Procedure: Performing the Migration
@@ -140,7 +130,6 @@ This tool simplifies creating the container storage and database volumes.
 
 ** Use the command in the following manner:
 +
-
 ----
 mgr-storage-server <storage-disk-device> [<database-disk-device>]
 ----
@@ -151,7 +140,6 @@ For example:
 mgr-storage-server /dev/nvme1n1 /dev/nvme2n1
 ----
 +
-
 [NOTE]
 ====
 This command will create the persistent storage volumes at [path]``/var/lib/containers/storage/volumes``.
@@ -161,31 +149,24 @@ For more information, see xref:installation-and-upgrade:container-management/per
 . Execute the following command to install a new {productname} server.
   Replace [literal]``<oldserver.fqdn>`` with the FQDN of the 4.3 server:
 +
-
 ----
 mgradm migrate podman <oldserver.fqdn>
 ----
-
 . Migrate trusted SSL CA certificates.
 
 
 ==== Migration of the Certificates
-//[IMPORTANT]
-//====
 Trusted SSL CA certificates that were installed as part of an RPM and stored on {productname} 4.3 in the [path]``/usr/share/pki/trust/anchors/`` directory will not be migrated.
-Because {suse} does not install RPM packages in the container, the administrator must migrate these certificate files manually from the 4.3 installation after migration:
-
+Because {suse} does not install RPM packages in the container, the administrator must migrate these certificate files manually from the 4.3 installation after the migration.
 
 .Procedure: Migrating the Certificates
 . Copy the file from the 4.3 server to the new server.
    For example, as [path]``/local/ca.file``.
 . Copy the file into the container with:
 +
-
 ----
 mgrctl cp /local/ca.file server:/etc/pki/trust/anchors/
 ----
-//====
 
 
 [IMPORTANT]
