--- a/modules/installation-and-upgrade/nav-installation-and-upgrade-guide.adoc
+++ b/modules/installation-and-upgrade/nav-installation-and-upgrade-guide.adoc
@@ -52,7 +52,7 @@ endif::[]
 ifeval::[{uyuni-content} == true]
 ** Upgrade and Migration
 *** Server
-**** xref:container-deployment/uyuni/migrate-uyuni-to-a-container.adoc[Migrate from Legacy to Container]
+**** xref:container-deployment/uyuni/migrate-uyuni-to-a-container.adoc[Legacy Server Migration to Container]
 **** xref:container-management/updating-server-containers.adoc[Server Upgrade]
 *** Proxy
 **** xref:container-deployment/uyuni/proxy-migration-uyuni.adoc[Migrate from Legacy to Container]
