Minor wording changes.

--- a/modules/installation-and-upgrade/pages/container-deployment/uyuni/migrate-uyuni-to-a-container.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/uyuni/migrate-uyuni-to-a-container.adoc
@@ -1,4 +1,4 @@
-= Legacy {productname} Server Migration to a Containerized Environment
+= Legacy {productname} Server Migration to Container
 ifeval::[{suma-content} == true]
 :noindex:
 endif::[]
