Revert "Changes to file names."
This reverts commit a76d6fc48afc9d5ebea88ef1e74cc3573637a7ae.

--- a/modules/installation-and-upgrade/pages/container-deployment/suma/server-migration-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/server-migration-suma.adoc
@@ -1,4 +1,4 @@
-= {productname} Server Migration to a Containerized Environment
+= Migrating the {productname} Server to a Containerized Environment
 ifeval::[{uyuni-content} == true]
 :noindex:
 endif::[]
@@ -62,11 +62,14 @@ After the migration, it will be necessary to manually update the DHCP and DNS re
 .Procedure: Initial preparation on the 4.3 server
 . Stop the {productname} services:
 +
+
 ----
 spacewalk-service stop
 ----
+
 . Stop the PostgreSQL service:
 +
+
 ----
 systemctl stop postgresql
 ----
@@ -81,11 +84,14 @@ The migration process will take care of the server installation.
 . Ensure that for [systemitem]``root`` an SSH key exists on the new {productnumber} server.
   If a key does not exist, create it with:
 +
+
 ----
 ssh-keygen -t rsa
 ----
+
 . The SSH configuration and agent should be ready on the new server for a passwordless connection to the 4.3 server.
 +
+
 [NOTE]
 ====
 To establish a passwordless connection, the migration script relies on an SSH agent running on the new server.
@@ -97,10 +103,12 @@ You will be prompted to enter the password for the private key during this proce
 . Copy the public SSH key to the {productname} 4.3 Server ([literal]``<oldserver.fqdn>``) with [command]``ssh-copy-id``.
   Replace [literal]``<oldserver.fqdn>`` with the FQDN of the 4.3 server:
 +
+
 ----
 ssh-copy-id <old server.fqdn>
 ----
 +
+
 The SSH key will be copied into the old server's [path]``~/.ssh/authorized_keys`` file.
 For more information, see the [literal]``ssh-copy-id`` manpage.
 +
@@ -121,7 +129,8 @@ For more information, see the [literal]``ssh-copy-id`` manpage.
 
 When planning your migration from {productname} 4.3 to {productname} 5.0, ensure that your target instance meets or exceeds the specifications of the old setup.
 
-This includes, but is not limited to, memory (RAM), CPU Cores, Storage, and Network Bandwidth.
+This includes, but is not limited to, [literal]``Memory (RAM)``, [literal]``CPU Cores``, [literal]``Storage``, and [literal]``Network Bandwidth``.
+
 
 .Procedure: Performing the Migration
 . This step is optional.
@@ -131,6 +140,7 @@ This tool simplifies creating the container storage and database volumes.
 
 ** Use the command in the following manner:
 +
+
 ----
 mgr-storage-server <storage-disk-device> [<database-disk-device>]
 ----
@@ -150,9 +160,11 @@ For more information, see xref:installation-and-upgrade:container-management/per
 . Execute the following command to install a new {productname} server.
   Replace [literal]``<oldserver.fqdn>`` with the FQDN of the 4.3 server:
 +
+
 ----
 mgradm migrate podman <oldserver.fqdn>
 ----
+
 . Migrate trusted SSL CA certificates.
 
 
@@ -168,6 +180,7 @@ Because {suse} does not install RPM packages in the container, the administrator
    For example, as [path]``/local/ca.file``.
 . Copy the file into the container with:
 +
+
 ----
 mgrctl cp /local/ca.file server:/etc/pki/trust/anchors/
 ----
