--- a/modules/installation-and-upgrade/pages/container-management/updating-proxy-containers.adoc
+++ b/modules/installation-and-upgrade/pages/container-management/updating-proxy-containers.adoc
@@ -1,4 +1,4 @@
-= Proxy Upgrade
+= Update Containers
 
 Before running the upgrade command, it is recommended to upgrade the [literal]``mgrpxy`` tool first.
 
